--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
 
 
       - name: Build and test helm chart
-        run: ./build/build-helm.sh service ${{ steps.tag.outputs.VERSION }} ${{ steps.trunk.outputs.VERSION }}
+        run: ./build/build-helm.sh kittyact ${{ steps.tag.outputs.VERSION }} ${{ steps.trunk.outputs.VERSION }}
 
       - name: Push tagged helm chart to repo
         if: ${{ steps.tag.conclusion != 'skipped' }}
