--- a/kittyact/templates/ingress.yaml
+++ b/kittyact/templates/ingress.yaml
@@ -16,7 +16,7 @@ metadata:
     app.kubernetes.io/version: 1.30.2
     argocd.argoproj.io/instance: {{$rootValues.name}}
     helm.sh/chart: service-1.30.2
-  name: {{$rootValues.name}}
+  name: {{$value.url}}
   namespace: {{$rootValues.namespace}}
 spec:
   rules:
