--- a/kittyact/templates/ingress.yaml
+++ b/kittyact/templates/ingress.yaml
@@ -1,5 +1,5 @@
 {{- $rootValues := .Values }}
-{{- range $key, $value := $rootValues.frontendUrls }}
+
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -16,10 +16,11 @@ metadata:
     app.kubernetes.io/version: 1.30.2
     argocd.argoproj.io/instance: {{$rootValues.name}}
     helm.sh/chart: service-1.30.2
-  name: {{$value.url}}
+  name: {{$rootValues.name}}
   namespace: {{$rootValues.namespace}}
 spec:
   rules:
+  {{- range $key, $value := $rootValues.frontendUrls }}
     - host: {{$value.url}}
       http:
         paths:
@@ -37,10 +38,11 @@ spec:
                   number: 3030
             path: /api
             pathType: Prefix
+  {{- end }}
   tls:
+  {{- range $key, $value := $rootValues.frontendUrls }}
     - hosts:
         - {{$value.url}}
       secretName: {{$value.url}}
----
   {{- end }}
   
