--- a/kittyact/templates/deployment.yaml
+++ b/kittyact/templates/deployment.yaml
@@ -91,8 +91,10 @@ spec:
         - name: {{ .Values.imagePullSecret }}
       {{- end }}
       initContainers:
-        - image: {{ .Values.image | default "kvalitetsit/kittyact" }} 
-          env: {{ if (not .Values.env) }}[]{{ end }}
+        - image: {{ .Values.image.repository | default "kvalitetsit/kittyact" }}:{{ .Values.image.tag | default "dev" }}
+          env: 
+          - name: REACT_APP_DOCKER_IMAGE_TAG
+            value: {{$.Values.image.tag}}
           {{- range $key, $value := .Values.env }}
           - name: {{ $key }}
             {{- if (not $value.type) }}
