--- a/kittyact/templates/ingress.yaml
+++ b/kittyact/templates/ingress.yaml
@@ -3,10 +3,11 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  {{- with $rootValues.ingress.annotations }}
   annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
+    cert-manager.io/cluster-issuer: letsencrypt-prod
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      more_set_headers "X-Request-Id: $req_id";
   labels:
     app: {{$rootValues.name}}
     app.kubernetes.io/instance: {{$rootValues.name}}
