--- a/kittyact/templates/ingress.yaml
+++ b/kittyact/templates/ingress.yaml
@@ -4,7 +4,9 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
+    {{- if $rootValues.letsencrypt }}
     cert-manager.io/cluster-issuer: letsencrypt-prod
+    {{- end }}
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/configuration-snippet: |
       more_set_headers "X-Request-Id: $req_id";
